fix sort tags that was hidden by the apartment cards

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -10,7 +10,6 @@
     width: 29vw;
     text-decoration: none;
     .apartment-fav {
-      z-index: 3;
       position: absolute;
       top: 10px;
       right: 10px;
