--- a/app/assets/stylesheets/components/_tags.scss
+++ b/app/assets/stylesheets/components/_tags.scss
@@ -20,6 +20,7 @@
     }
   }
   .sort-tags {
+    z-index: 3;
     position: absolute;
     top: calc(4.5vh + 3px);
     width: 100%;
